2021-08-06  Michael Catanzaro  <mcatanzaro@gnome.org>

        MallocBench: fix ODR violation
        https://bugs.webkit.org/show_bug.cgi?id=228874

        Reviewed by Geoffrey Garen.

        When built with LTO enabled, GCC will warn about violations of C++'s one-definition rule.
        MallocBench has two different Objects in two different files, which is illegal. We could
        rename one of them, but I decided it's simplest to just put them each in anonymous
        namespaces in order to restrict them to file scope.

        * MallocBench/MallocBench/big.cpp:
        * MallocBench/MallocBench/stress.cpp:

2021-07-25  Cathie Chen  <cathiechen@igalia.com>

        [Performance test][css-contain] Add test to contain: size layout
        https://bugs.webkit.org/show_bug.cgi?id=227948

        Reviewed by Ryosuke Niwa.

        This test emulates the scenario that a small part of the page is changed. If it's applied contain: size layout,
        the performance should be improved. This test is a transform of the test [1] in blink.

        [1] third_party/blink/perf_tests/layout/css-contain-change-text.html

        * Layout/css-contain-change-size.html: Added.

2021-07-16  Manuel Rego Casasnovas  <rego@igalia.com>

        Remove CSS Regions perf tests
        https://bugs.webkit.org/show_bug.cgi?id=228016

        Reviewed by Ryosuke Niwa.

        The feature has been removed long time ago, so let's do the same with the associated perf tests.

        * Layout/RegionsAuto.html: Removed.
        * Layout/RegionsAutoMaxHeight.html: Removed.
        * Layout/RegionsExtendingSelectionMixedContent.html: Removed.
        * Layout/RegionsFixed.html: Removed.
        * Layout/RegionsFixedShort.html: Removed.
        * Layout/RegionsSelectAllMixedContent.html: Removed.
        * Layout/RegionsSelection.html: Removed.
        * Layout/RegionsShapes.html: Removed.
        * Layout/Shapes/RegionsShapesNoShapes.html: Removed.