@@ -1,3 +1,15 @@
+2021-09-07  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        Add a PerformanceTest for some common FontFaceSet style update operations
+        https://bugs.webkit.org/show_bug.cgi?id=229913
+
+        Reviewed by Stephanie Lewis.
+
+        This is similar to some of the operations we've seen in the wild.
+        We want to make sure we can do these fast.
+
+        * CSS/FontFaceSetUpdateStyle.html: Added.
+
 2021-08-06  Michael Catanzaro  <mcatanzaro@gnome.org>
 
         MallocBench: fix ODR violation
